Letter spacing correction

--- a/index.css
+++ b/index.css
@@ -243,7 +243,7 @@ input[type="radio"] {
     font-size: 14px;
     line-height: 22px;
     font-weight: 500;
-    letter-spacing: 8%;
+    /* letter-spacing: 8%; */
 }
 
 /* Responsive Breakpoints */
